fix: make character sheet wider to make combat table visible by default also some other minor css fixes

--- a/src/rqg.scss
+++ b/src/rqg.scss
@@ -74,6 +74,7 @@
   .flex-row {
     display: flex;
     justify-content: space-between;
+    gap: 0.5rem;
 
     > * {
       height: 100%;
